--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <h1>Hello World, it's my itis 3146 class!</h1>
     </body>
 </html>
