--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World, it's my itis 3155 class!</h1>
+        <h1>Hello World!</h1>
     </body>
 </html>
