--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World, it's my itis 3146 class!</h1>
+        <h1>Hello World, I'm Joe Vanstory and this is the root of my website.</h1>
     </body>
 </html>
