--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="default.css">
+        <title>table</title>
+    </head>
     <body>
-        <h1>Hello World, it's my itis 3135 class!</h1>
+        <div class="topnav">
+			<a href="https://webpages.charlotte.edu/jvanstor/">Home</a>
+            <br>
+			<a href="https://webpages.charlotte.edu/jvanstor/itis3135/">Click to go to ITIS3135 Site</a>
+			<br>
+			<a href="https://webpages.charlotte.edu/jvanstor/itis3135/tables.html">Click to go to my Tables</a>
+            <br>
+            <a href="https://webpages.charlotte.edu/jvanstor/itis3135/forms.html">Click to go to my Forms</a>
+		</div>
+        <header>
+            <h1>Joseph Vanstory's Jittery Vulture</h1>
+        </header>
+        <main>
+            <h2>I am Joseph Vanstory and this is my ITIS3135 First Course Page.</h2>
+        </main>
+            <footer>
+
+            </footer>
     </body>
 </html>
