--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -6,13 +6,13 @@
     </head>
     <body>
         <div class="topnav">
-			<a href="https://webpages.charlotte.edu/jvanstor/">Home</a>
+			<a href="https://jvanstory.github.io/">Home</a>
             <br>
-			<a href="https://webpages.charlotte.edu/jvanstor/itis3135/">Click to go to ITIS3135 Site</a>
+			<a href="https://jvanstory.github.io/itis3135/">Click to go to ITIS3135 Site</a>
 			<br>
-			<a href="https://webpages.charlotte.edu/jvanstor/itis3135/tables.html">Click to go to my Tables</a>
+			<a href="https://jvanstory.github.io/itis3135/tables.html">Click to go to my Tables</a>
             <br>
-            <a href="https://webpages.charlotte.edu/jvanstor/itis3135/forms.html">Click to go to my Forms</a>
+            <a href="https://jvanstory.github.io/itis3135/forms.html">Click to go to my Forms</a>
 		</div>
         <header>
             <h1>ITIS 3135 || Joseph Vanstory</h1>
