--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <div class="topnav">
 			<a href="https://jvanstory.github.io/">Home</a>
             <br>
-			<a href="itis3135/">Click to go to ITIS3135 Site</a>
+			<a href="https://jvanstory.github.io/itis3135/">Click to go to ITIS3135 Site</a>
 			<br>
-			<a href="itis3135/tables.html">Click to go to my Tables</a>
+			<a href="https://jvanstory.github.io/itis3135/tables.html">Click to go to my Tables</a>
             <br>
-            <a href="itis3135/forms.html">Click to go to my Forms</a>
+            <a href="https://jvanstory.github.io/itis3135/forms.html">Click to go to my Forms</a>
 		</div>
         <header>
             <h1>Joseph Vanstory's Jittery Vulture</h1>
