Updated folders and pages

--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -5,22 +5,22 @@
     </style>
     <head>
         <link rel="stylesheet" href="styles/default.css">
-        <title>ITIS 3135 || Joseph Vanstory || Forms || webpages.uncc.edu.jvanstor
+        <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || Forms
         </title>
     </head>
     <body>
         <header>
-            <h1>ITIS 3135 || Joseph Vanstory</h1>
+            <h1>ITIS 3135 || Joseph Vanstory's Jittery Vulture</h1>
         </header>
         <nav class="dropdown">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="https://webpages.charlotte.edu/jvanstor/">Home</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/">ITIS3135</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/tables.html">Tables</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/forms.html">Forms</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/vanstoryenterprised.com/">VanstoryEnterprised</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/website_evaluations.html">Website Evalutations</a>
+                <a href="index.html">ITIS3135</a>
+                <a href="tables.html">Tables</a>
+                <a href="forms.html">Forms</a>
+                <a href="website_evaluations.html">Website Evalutations</a>
+                <a href="stuff/bad%20Name@2.htm">Bad Website</a>
+                <a href="firstscripts.html">First Scripts</a>
             </div>
         </nav>
         <main>
