--- a/itis3135/stuff/bad Name@2.htm
+++ b/itis3135/stuff/bad Name@2.htm
@@ -7,6 +7,10 @@
         border-left: thin solid pink;
         margin: 59px;
     }
+    @font-face{
+        font-family: comic-papyrus;
+        src: url(Comic\ Papyrus.ttf)
+    }
     h2{
         font-family: comic-sans;
         background-color: rgb(61, 20, 20);
@@ -32,4 +36,4 @@
 <br>
 <p style="font-family: times; text-align: center; font-size: 100px">This is a paragraph</p>
 <br><br><br><br>
-<p>this is the bottom</p>
+<p style="font-family: comic-papyrus; font-size: 69px">this is the bottom</p>
