--- a/itis3135/vanstoryenterprised.com/about.html
+++ b/itis3135/vanstoryenterprised.com/about.html
@@ -11,7 +11,7 @@
                 display: flex;
                 flex-direction: column;
                 font-family: 'Poppins', sans-serif;
-                background-color: #533E49;
+                background-color: #222629;
                 color: #E3E3E3;
             }
             .main {
@@ -38,6 +38,13 @@
         <header>
             <h1>Vanstory Enterprised <img src="vulture.png" width="25" height="25"/></h1>
         </header>
+        <nav class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="vanstoryenterprised.com">VanstoryEnterprised</a>
+                <a href="vanstoryenterprised.com/about.html">About</a>
+            </div>
+        </nav>
         <main>
             <h3><strong>Vanstory Enterprised Services</strong></h3>
             <p>Vanstory Enterprised is a company that prides itself in working together with the community. <br> You will often see our 
