--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles/default.css">
-        <title>ITIS 3135 || Joseph Vanstory || index || webpages.uncc.edu.jvanstor
-        </title>
+        <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || index</title>
     </head>
     <body>
         <header>
-            <h1>ITIS 3135 || Joseph Vanstory Jittery Vulture</h1>
+            <h1>ITIS 3135 || Joseph Vanstory's Jittery Vulture</h1>
         </header>
         <nav class="dropdown">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="https://webpages.charlotte.edu/jvanstor/">Home</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/">ITIS3135</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/tables.html">Tables</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/forms.html">Forms</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/vanstoryenterprised.com/">VanstoryEnterprised</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/website_evaluations.html">Website Evalutations</a>
-          </div>
+                <a href="index.html">ITIS3135</a>
+                <a href="tables.html">Tables</a>
+                <a href="forms.html">Forms</a>
+                <a href="website_evaluations.html">Website Evalutations</a>
+                <a href="stuff/bad%20Name@2.htm">Bad Website</a>
+                <a href="firstscripts.html">First Scripts</a>
+            </div>
         </nav>
         <main>
             <h2>I am Joseph Vanstory and this is my ITIS3135 First Course Page.</h2>
