--- a/itis3135/vanstoryenterprised.com/index.html
+++ b/itis3135/vanstoryenterprised.com/index.html
@@ -62,12 +62,8 @@
         <nav class="dropdown">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="https://webpages.charlotte.edu/jvanstor/">Home</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/">ITIS3135</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/tables.html">Tables</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/forms.html">Forms</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/vanstoryenterprised.com/">VanstoryEnterprised</a>
-                <a href="https://webpages.charlotte.edu/jvanstor/itis3135/website_evaluations.html">Website Evalutations</a>
+                <a href="vanstoryenterprised.com">VanstoryEnterprised</a>
+                <a href="vanstoryenterprised.com/about.html">About</a>
             </div>
         </nav>
             <img src="IMG-8184.JPG" alt="picture" width="100" height="100">
