added calculator page

--- a/itis3135/format.html
+++ b/itis3135/format.html
@@ -6,6 +6,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
     </head>
     <style>
         body {
@@ -50,19 +52,9 @@
     </style>
     <body>
         <header>
+            <nav id="siteLinks"></nav>
             <h1>ITIS 3135 || Joseph Vanstory's Jittery Vulture</h1>
         </header>
-        <nav class="dropdown">
-            <button class="dropbtn">Menu</button>
-            <div class="dropdown-content">
-                <a href="index.html">ITIS3135</a>
-                <a href="tables.html">Tables</a>
-                <a href="forms.html">Forms</a>
-                <a href="website_evaluations.html">Website Evalutations</a>
-                <a href="stuff/bad%20Name@2.htm">Bad Website</a>
-                <a href="firstscripts.html">First Scripts</a>
-            </div>
-        </nav>
         <main>
             /* p*5>lorem*3 */
             <p>            
@@ -94,7 +86,8 @@
             </script>
             <br><a href="https://www.linkedin.com/in/joe-vanstory-095193240/">Linked in</a><br>
             <a href="https://github.com/Jvanstory">  Github</a>
-            <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/vanstoryenterprised.com/about.html">VanstoryEnterprised</a></div>
+            <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">VanstoryEnterprised</a></div>
         </footer>
+        <script src="defaultscripts.js"></script>
 </body>
 </html>
