--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles/default.css">
+        <link rel="stylesheet" href="styles/default.css">    
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || index</title>
     </head>
     <body>
         <header>
+            <nav id="siteLinks">Nav Links Here</nav>
             <h1>ITIS 3135 || Joseph Vanstory's Jittery Vulture</h1>
         </header>
-        <nav class="dropdown">
-            <button class="dropbtn">Menu</button>
-            <div class="dropdown-content">
-                <a href="index.html">ITIS3135</a>
-                <a href="tables.html">Tables</a>
-                <a href="forms.html">Forms</a>
-                <a href="website_evaluations.html">Website Evalutations</a>
-                <a href="stuff/bad%20Name@2.htm">Bad Website</a>
-                <a href="firstscripts.html">First Scripts</a>
-            </div>
-        </nav>
         <main>
             <h2>I am Joseph Vanstory and this is my ITIS3135 First Course Page.</h2>
         </main>
@@ -33,7 +24,9 @@
                 </script>
                 <script id = "validation_link_css">document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
                 </script>
-                <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/vanstoryenterprised.com/about.html">VanstoryEnterprised</a></div>
+                <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">VanstoryEnterprised</a></div>
             </footer>
+            <script src="scripts/defaultscripts.js"></script>
+            <script src="defaultscripts.js"></script>
     </body>
 </html>
