--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -2,24 +2,15 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles/default.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script type="text/javascript" src="scripts/defaultscripts.js"></script>
-        <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || FILE TITLE</title>
+        <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || First Scripts</title>
     </head>
     <body>
         <header>
+            <nav id="siteLinks"></nav>
             <h1>ITIS 3135 || Joseph Vanstory's Jittery Vulture</h1>
         </header>
-        <nav class="dropdown">
-            <button class="dropbtn">Menu</button>
-            <div class="dropdown-content">
-                <a href="index.html">ITIS3135</a>
-                <a href="tables.html">Tables</a>
-                <a href="forms.html">Forms</a>
-                <a href="website_evaluations.html">Website Evalutations</a>
-                <a href="stuff/bad%20Name@2.htm">Bad Website</a>
-                <a href="firstscripts.html">First Scripts</a>
-            </div>
-        </nav>
         <main>
             <h3 id="date"></h3> 
             <input type="text" placeholder="Enter Name" id="fullName">
@@ -45,7 +36,6 @@
             <input type="text" placeholder="Enter Number" id="taxinput1">
             <button type="button" onclick="tax();">Calulate Tax</button>
         </main>
-        <script type="text/javascript" src="scripts/defaultscripts.js"></script>
         <footer>
             <a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
                 <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML." />
@@ -59,7 +49,9 @@
             </script>
             <br><a href="https://www.linkedin.com/in/joe-vanstory-095193240/">Linked in</a><br>
             <a href="https://github.com/Jvanstory">  Github</a>
-            <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/vanstoryenterprised.com/about.html">VanstoryEnterprised</a></div>
+            <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">VanstoryEnterprised</a></div>
         </footer>
+        <script src="scripts/defaultscripts.js"></script>
+        <script src="defaultscripts.js"></script>
 </body>
 </html>
