--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -2,24 +2,14 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles/default.css">
-        <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || tables
-        </title>
+        <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || tables</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     </head>
     <body>
         <header>
+            <nav id="siteLinks"></nav>
             <h1>ITIS 3135 || Joseph Vanstory's Jiterry Vulture</h1>
         </header>
-        <nav class="dropdown">
-            <button class="dropbtn">Menu</button>
-            <div class="dropdown-content">
-                <a href="index.html">ITIS3135</a>
-                <a href="tables.html">Tables</a>
-                <a href="forms.html">Forms</a>
-                <a href="website_evaluations.html">Website Evalutations</a>
-                <a href="stuff/bad%20Name@2.htm">Bad Website</a>
-                <a href="firstscripts.html">First Scripts</a>
-            </div>
-        </nav>
         <main>
             <h2>HTML Tables</h2>
             <h3>My Tabular Data</h3>
@@ -150,7 +140,9 @@
                 </script>
                 <script id = "validation_link_css">document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
                 </script>
-                <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/vanstoryenterprised.com/about.html">VanstoryEnterprised</a></div>
+                <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">VanstoryEnterprised</a></div>
             </footer>
+            <script src="scripts/defaultscripts.js"></script>
+            <script src="/private_html/itis3135/scripts/defaultscripts.js"></script>
     </body>
 </html>
