--- a/itis3135/vanstoryenterprised.com/about.html
+++ b/itis3135/vanstoryenterprised.com/about.html
@@ -1,37 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <style>
-            /*https://coolors.co/132a13-694f5d-e3e3e3-809848-5da271*/
-            @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&family=Roboto&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap');
-            body {
-                margin: 0;
-                padding: 0;
-                min-height: 100vh;
-                display: flex;
-                flex-direction: column;
-                font-family: 'Poppins', sans-serif;
-                background-color: #222629;
-                color: #E3E3E3;
-            }
-            .main {
-                flex-grow: 1;
-            }
-            p{
-                padding-left: 25px;
-                padding-right: 25px;
-                padding-top: 0%;
-            }
-            h1{
-                text-align: center;
-            }
-            h3{
-                padding-left: 10px;
-            }
-            img{
-                padding-left: 25px;
-            }
-        </style>
+        <link rel="stylesheet" href="default.css">
         <title>Joseph Vanstory || ITIS3135 || vanstoryenterprised.com || About</title>
     </head>
     <body>
@@ -42,7 +12,7 @@
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
                 <a href="vanstoryenterprised.com">VanstoryEnterprised</a>
-                <a href="vanstoryenterprised.com/about.html">About</a>
+                <a href="about.html">About</a>
             </div>
         </nav>
         <main>
