Update: added pages

--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <nav id="siteLinks"></nav>
+        <br><nav id="secondLinks"></nav>
         <h1>Calculator FCC</h1>
     </header>
     <main>
