--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="styles/default.css">    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-        <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || Home</title>
+        <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || Contract</title>
     </head>
     <body>
         <header>
@@ -12,8 +12,11 @@
             <h1>ITIS 3135 || Joseph Vanstory's Jittery Vulture</h1>
         </header>
         <main>
-            <h2>home</h2>
-            <h3>I am Joseph Vanstory and this is my ITIS3135 First Course Page.</h3>
+            <h2>Contract</h2>
+            <p>I, Joseph D. Vanstory agree to abide by the terms in my spring 2023 ITIS 3135 Web App Design and Development.</p>
+            <p>I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
+            <p>Signed:</p>
+            <p>Joseph D. Vanstory, 16 March 2023</p>
         </main>
             <footer>
                 <a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
