--- a/itis3135/polygons.html
+++ b/itis3135/polygons.html
@@ -11,12 +11,14 @@
 <body>
     <header>
         <nav id="siteLinks"></nav>
+        <br><nav id="secondLinks"></nav>
         <h1>Name the Polygon</h1>
     </header>
     <main>
         <p>The Jittery Vulture would like the number of sides: </p>
             <input type="number" placeholder="Number of Sides" id="sides">
             <button type="button" onclick="getShape();">Name Polygon</button>
+            <p id="polygon" class="polygon"></p>
     </main>
     <footer>
         <a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
