--- a/itis3135/template.html
+++ b/itis3135/template.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/default.css">    
-    <title>Template With Nav</title>
+    <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || Home</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 <body>
     <header>
         <nav id="siteLinks">Nav Links Here</nav>
-        <h1>Nav Links Here</h1>
+        <br><nav id="secondLinks"></nav>
+        <h1>ITIS 3135 || Joseph Vanstory's Jittery Vulture</h1>
     </header>
     <main>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque, officiis neque dignissimos vel optio aut ullam quo sapiente quasi voluptatibus quidem magnam ut aliquam amet nihil eligendi minima? Veniam!</p>
