--- a/itis3135/vanstoryenterprised.com/about.html
+++ b/itis3135/vanstoryenterprised.com/about.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1>Vanstory Enterprised <img src="vulture.png" width="25" height="25"/></h1>
+            <h1>Vanstory Enterprised <img src="company_logo.png" width="40" height="40"/></h1>
         </header>
         <nav class="dropdown">
             <button class="dropbtn">Menu</button>
@@ -45,6 +45,6 @@
             </script>
             <script id = "validation_link_css">document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
             </script>
-            <p>Page created by Vanstory Enterprised <img src="vulture.png" width="15" height="15"/></p>
+            <p>Page created by Vanstory Enterprised <img src="company_logo.png" width="40" height="40"/></p>
         </footer>
     </body>
