UPDATE: Added pages

--- a/itis3135/vanstoryenterprised.com/index.html
+++ b/itis3135/vanstoryenterprised.com/index.html
@@ -15,6 +15,7 @@
                 <a href="about.html">About</a>
             </div>
         </nav>
+            <br><br>
             <img src="IMG-8184.JPG" alt="picture" width="100" height="100">
             <h1>Personal Background</h2><br>
             <p>I grew up in a small town an hour from Charlotte. I went to an early college and am currently attending UNCC. I have one dog at home and no other pets.</p><br>
@@ -29,7 +30,7 @@
             <h1>Courses Taking</h6><br>
             <ul>
                 <li>ITIS 3135 - Wanted to learn about web development</li> 
-                <li>ITSC 3166 - I thought that it would be interestin</li>
+                <li>ITSC 3166 - I thought that it would be interesting</li>
                 <li>ITSC 3112 - I liked that it was offered online</li>
                 <li>ITSC 3155 - I am hoping it will help me learn more about software engineering</li> 
                 <li>ITSC 3146 - I want to learn more about operating systems</li>
