Update: Fixed HTML errors

--- a/itis3135/arrays.html
+++ b/itis3135/arrays.html
@@ -47,20 +47,7 @@
         </div>
         <button id="displayResults" onclick="displayResults();" value="Display Results">Display Results</button>
     </main>
-    <footer>
-        <a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
-            <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML." />
-        </a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer" id = "validation_link_html">
-            <img src="images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
-        </a>
-        <script id = "validation_link_html">document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);                   
-        </script>
-        <script id = "validation_link_css">document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-        </script>
-        <div>Vanstory Enterprise</div>
-        <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">Vanstory Enterprise</a></div>
-    </footer>
+    <footer id="footer"></footer>
     
     <script src="scripts/defaultscripts.js"></script>
     <script src="/private_html/itis3135/scripts/defaultscripts.js"></script>
