--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -17,21 +17,7 @@
     <main>
         <h2>My code works in Calculator try</h2>
     </main>
-    <footer>
-        <a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
-            <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML." />
-        </a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer" id = "validation_link_html">
-            <img src="images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
-        </a>
-        <script id = "validation_link_html">document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);                   
-        </script>
-        <script id = "validation_link_css">document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-        </script>
-        <br><a href="https://www.linkedin.com/in/joe-vanstory-095193240/">Linked in</a><br>
-        <a href="https://github.com/Jvanstory">  Github</a>
-        <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">VanstoryEnterprised</a></div>
-    </footer>
+    <footer id="footer"></footer>
     <script src="/private_html/itis3135/scripts/calculator_try.js"></script>
     <script src="scripts/calculator_try.js"></script>
     <script src="scripts/defaultscripts.js"></script>
