--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles/default.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture ||  Website Evaluations</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     </head>
@@ -16,12 +17,13 @@
             <div class="grid-container">
                 <div class="good">
                     <h3>Good Website</h3>
-                    <p><a href="https://www.nerdwallet.com/">Nerdwallet</a></p>
+                    <a href="https://www.nerdwallet.com/">Nerdwallet</a>
                     <p>
                         This is the webpage for nerdwallet. A company that helps their customer pick the right credit card for them. 
                         It features many different links and images with a green and white color scheme. 
                     </p>
-                    <ul>Crap Principles
+                    <p>Crap Principles</p>
+                    <ul>
                         <li>Contrast</li>
                         <li>Alignment</li>
                         <li>Repetition</li>
@@ -39,7 +41,8 @@
                         This is the website for yale's school of art. It contains information for yale's school of art. It gives updates and 
                         ways to apply to the school. 
                     </p>
-                    <ul>Crap Principles
+                    <p>Crap Principles</p>
+                    <ul>
                         <li>Contrast</li>
                         <li>Alignment</li>
                         <li>Repetition</li>
@@ -52,19 +55,7 @@
                 </div>
             </div>
         </main>
-            <footer>
-                <a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
-                    <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML." />
-                </a>
-                <a href="https://jigsaw.w3.org/css-validator/check/referer" id = "validation_link_html">
-                    <img src="images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
-                </a>
-                <script id = "validation_link_html">document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);                   
-                </script>
-                <script id = "validation_link_css">document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-                </script>
-                <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">VanstoryEnterprised</a></div>
-            </footer>
+        <footer id="footer"></footer>
             <script src="scripts/defaultscripts.js"></script>
     
     <script src="/private_html/itis3135/scripts/defaultscripts.js"></script>
