--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles/default.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-        <script type="text/javascript" src="scripts/defaultscripts.js"></script>
         <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || First Scripts</title>
     </head>
     <body>
@@ -43,21 +43,7 @@
             <button type="button" onclick="tax();">Calulate Tax</button>
             <p id="tax" class="tax"></p>
         </main>
-        <footer>
-            <a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
-                <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML." />
-            </a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer" id = "validation_link_html">
-                <img src="images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
-            </a>
-            <script id = "validation_link_html">document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);                   
-            </script>
-            <script id = "validation_link_css">document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-            </script>
-            <br><a href="https://www.linkedin.com/in/joe-vanstory-095193240/">Linked in</a><br>
-            <a href="https://github.com/Jvanstory">  Github</a>
-            <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">VanstoryEnterprised</a></div>
-        </footer>
+        <footer id="footer"></footer>
         <script src="scripts/defaultscripts.js"></script>
         <script src="defaultscripts.js"></script>
 </body>
