--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles/default.css">    
+        <link rel="stylesheet" href="styles/default.css">  
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <title>ITIS 3135 || Joseph Vanstory's Jittery Vulture || Slideshow</title>
         
@@ -17,48 +18,47 @@
             <div id="slideshow">
                 <div class="slides">
                     <div class="slide">
-                <img class="slideimage" src="images/company_logo.png" alt="Image 1"><br>
-                <caption class="slideimage" alt="Image 1">My personally drawn logo(easily my best artwork)</caption>
+                    <figure>
+                        <img class="slideimage" src="images/company_logo.png" alt="Image 1"><br>
+                        <figcaption class="slideimage">My personally drawn logo(easily my best artwork)</figcaption>
+                    </figure>
             </div>
             <div class="slide">
-                <img class="slideimage" src="images/pexels-john-petalcurin-2115257.jpg" alt="Image 2"><br>
-                <caption class="slideimage" alt="Image 2">I enjoy video games</caption>
+                <figure>
+                    <img class="slideimage" src="images/pexels-john-petalcurin-2115257.jpg" alt="Image 2"><br>
+                    <figcaption class="slideimage">I enjoy video games</figcaption>
+                </figure>
             </div>
             <div class="slide">
+            <figure>
                 <img class="slideimage" src="images/pexels-malidate-van-784632.jpg" alt="Image 3"><br>
-                <caption class="slideimage">I enjoy cooking</caption>
+                <figcaption class="slideimage">I enjoy cooking</figcaption>
+            </figure>
             </div> 
             <div class="slide">
-                <img class="slideimage" src="images/pexels-nathan-engel-436413.jpg" alt="Image 4"><br>
-                <caption class="slideimage">I enjoy movies, mostly action and horror</caption>
+                <figure>
+                    <img class="slideimage" src="images/pexels-nathan-engel-436413.jpg" alt="Image 4"><br>
+                    <figcaption class="slideimage">I enjoy movies, mostly action and horror</figcaption>
+                </figure>
             </div>  
             <div class="slide">
+            <figure>
                 <img class="slideimage" src="images/pexels-pixabay-86405.jpg" alt="Image 5"><br>
-                <caption class="slideimage">Penguins are the best</caption>
+                <figcaption class="slideimage">Penguins are the best</figcaption>
+            </figure>
             </div>   
             <div class="slide">
+            <figure>
                 <img class="slideimage" src="images/phasmophobia.jpg" alt="Image 6"><br>
-                <caption class="slideimage">My favorite game</caption>
+                <figcaption class="slideimage">My favorite game</figcaption>
+            </figure>
             </div>
             </div>
-            <button class="prev" onclick="prevSlide()"><</button>
-            <button class="next" onclick="nextSlide()">></button>
+            <button class="prev" onclick="prevSlide()">&#60;</button>
+            <button class="next" onclick="nextSlide()">&#62;</button>
             </div>
         </main><br><br>
-            <footer>
-                <a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
-                    <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML." />
-                </a>
-                <a href="https://jigsaw.w3.org/css-validator/check/referer" id = "validation_link_html">
-                    <img src="images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
-                </a>
-                <script id = "validation_link_html">document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);                   
-                </script>
-                <script id = "validation_link_css">document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-                </script>
-                <div>Vanstory Enterprise</div>
-                <div>Copywrited by <a href="https://webpages.charlotte.edu/jvanstor/itis3135/vanstoryenterprised.com/">Vanstory Enterprise</a></div>
-            </footer>
+        <footer id="footer"></footer>
             <script src="scripts/defaultscripts.js"></script>
             <script src="defaultscripts.js"></script>
     </body>
